test/orig/01-syntax/inv_name/inv_name.ml
let () = [%LOG [%DEBUG] "msg" [%NAME 0]]
